# newton

./: .env.example  .gitignore  config.toml  main.py  pyproject.toml
newton/: __init__.py  agent.py  config.py  context.py  events.py  local_adapter.py  memory.py  scheduler.py  telegram_adapter.py  tracing.py
newton/tools/: __init__.py  bash.py  browser.py  scripts.py  searxng.py  subagent.py  vikunja.py
tests/: conftest.py  test_agent.py  test_archival_loop.py  test_bash_tool.py  test_browser.py  test_config.py  test_context.py  test_events.py  test_integration.py  test_scripts.py  test_scripts_integration.py  test_subagent.py  test_tools.py  test_vikunja.py
